--- a/_posts/2018-2-7-people.md
+++ b/_posts/2018-2-7-people.md
@@ -1,16 +1,15 @@
 ---
 layout: post
-title: Jekyll Theme - Project Gaia
+title: People - Project Gaia
 category : Intro
 tags : [intro, tag1, tag2]
 stickie: true
 ---
 
-## Desc
+## Current People
 
->This post is only for demo, some contents may be archived. 
-> 
-> Please check document for newest details:  [ Document](https://szhielelp.github.io/JekyllTheme-ProjectGaia-Docs/#/ )
+> Dr. Jesús Zavala Franco
+Associate Professor, Faculty of Physical Sciences, University of Iceland 
  
 ## Update History
 
