--- a/_posts/2018-2-7-people.md
+++ b/_posts/2018-2-7-people.md
@@ -8,8 +8,8 @@ stickie: true
 
 ## Current People
 
-> Dr. Jesús Zavala Franco
-Associate Professor, Faculty of Physical Sciences, University of Iceland 
+- Dr. Jesús Zavala Franco
+- Associate Professor, Faculty of Physical Sciences, University of Iceland 
  
 ## Update History
 
