--- a/_posts/2018-2-7-people.md
+++ b/_posts/2018-2-7-people.md
@@ -6,10 +6,45 @@ tags : [intro, tag1, tag2]
 stickie: true
 ---
 
-## Current People
+## Working with the development of ETHOS at the University of Iceland
 
 - Dr. Jesús Zavala Franco
-- Associate Professor, Faculty of Physical Sciences, University of Iceland 
+- Associate Professor, Faculty of Physical Sciences, University of Iceland
+- PhD, 2007, Universidad Nacional Autónoma de México
+
+- email jzavala@hi.is 
+- website: https://notendur.hi.is/~jzavala/index.html
+
+
+Torsten Bringmann
+Professor, Department of Physics, University of Oslo
+PhD, 2005, University of Stockholm
+
+torsten.bringmann@fys.uio.no, link to website: http://www.mn.uio.no/fysikk/english/people/aca/troms/
+
+Francis-Yan Cyr-Racine
+Postdoctoral Fellow, Department of Physics, Harvard University
+PhD, 2012, University of British Columbia
+
+fcyrraci@physics.harvard.edu, link to website: http://users.physics.harvard.edu/~fcyrraci/index.html
+
+Christoph Pfrommer
+Professor, Leibniz Institute for Astrophysics Potsdam
+PhD, 2005, Max Planck Institute for Astrophysics
+
+cpfrommer@aip.de, link to website: http://www.cita.utoronto.ca/~pfrommer/
+
+Kris Sigurdson
+Associate Professor, Department of Physics and Astronomy, University of British Columbia
+PhD, 2005, California Institute of Technology
+
+krs@phas.ubc.ca, link to website: http://www.phas.ubc.ca/~krs/
+
+Mark Vogelsberger
+Assistant Professor, Department of Physics, MIT
+PhD, 2010, Max Planck Institute for Astrophysics
+
+mvogelsb@mit.edu, link to website: http://web.mit.edu/physics/people/faculty/vogelsberger_mark.html
  
 ## Update History
 
