--- a/_posts/2018-2-7-people.md
+++ b/_posts/2018-2-7-people.md
@@ -2,11 +2,10 @@
 layout: post
 title: People - Project ETHOS
 category : Intro
-tags : [intro, tag1, tag2]
 stickie: true
 ---
 
-## Working with the development of ETHOS at the University of Iceland
+## ETHOS member at the University of Iceland
 
 - Dr. Jesús Zavala Franco
 - Associate Professor, Faculty of Physical Sciences, University of Iceland
@@ -17,7 +16,7 @@ stickie: true
 
   
 
-  
+
 Torsten Bringmann
 Professor, Department of Physics, University of Oslo
 PhD, 2005, University of Stockholm
