--- a/_posts/2018-2-7-people.md
+++ b/_posts/2018-2-7-people.md
@@ -5,18 +5,17 @@ category : Intro
 stickie: true
 ---
 
-## ETHOS member at the University of Iceland
+# ETHOS members at the University of Iceland
 
 - Dr. Jesús Zavala Franco
 - Associate Professor, Faculty of Physical Sciences, University of Iceland
 - PhD, 2007, Universidad Nacional Autónoma de México
-
 - email jzavala@hi.is 
 - website: https://notendur.hi.is/~jzavala/index.html
 
   
 
-
+# ETHOS members
 Torsten Bringmann
 Professor, Department of Physics, University of Oslo
 PhD, 2005, University of Stockholm
