--- a/_posts/2018-2-7-people.md
+++ b/_posts/2018-2-7-people.md
@@ -6,12 +6,13 @@ stickie: true
 ---
 
 # ETHOS members at the University of Iceland
-<table><tr>
-  <td>
-    
+<table>
+  <tr><td>Dr. Jesús Zavala Franco</td></tr>
+  <tr>
+  <td> 
   </td>
   <td>
-- Dr. Jesús Zavala Franco
+- 
 - Associate Professor, Faculty of Physical Sciences, University of Iceland
 - PhD, 2007, Universidad Nacional Autónoma de México
 - email jzavala@hi.is 
