--- a/_posts/2018-2-7-people.md
+++ b/_posts/2018-2-7-people.md
@@ -6,19 +6,23 @@ stickie: true
 ---
 
 # ETHOS members at the University of Iceland
-<table>
-  <tr><td>Dr. Jesús Zavala Franco</td></tr>
+<table style="width:100%">
   <tr>
-  <td> 
-  </td>
-  <td>
-- 
-- Associate Professor, Faculty of Physical Sciences, University of Iceland
-- PhD, 2007, Universidad Nacional Autónoma de México
-- email jzavala@hi.is 
-- website: https://notendur.hi.is/~jzavala/index.html
-</td>
-</tr></table>
+    <th>Firstname</th>
+    <th>Lastname</th> 
+    <th>Age</th>
+  </tr>
+  <tr>
+    <td>Jill</td>
+    <td>Smith</td> 
+    <td>50</td>
+  </tr>
+  <tr>
+    <td>Eve</td>
+    <td>Jackson</td> 
+    <td>94</td>
+  </tr>
+</table>
   
 
 # ETHOS members
