--- a/_posts/2018-2-7-people.md
+++ b/_posts/2018-2-7-people.md
@@ -8,20 +8,10 @@ stickie: true
 # ETHOS members at the University of Iceland
 <table style="width:100%">
   <tr>
-    <th>Firstname</th>
-    <th>Lastname</th> 
-    <th>Age</th>
+    <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td> Dr Jesus  </td>
   </tr>
-  <tr>
-    <td>Jill</td>
-    <td>Smith</td> 
-    <td>50</td>
-  </tr>
-  <tr>
-    <td>Eve</td>
-    <td>Jackson</td> 
-    <td>94</td>
-  </tr>
+
 </table>
   
 
