--- a/_posts/2018-2-7-people.md
+++ b/_posts/2018-2-7-people.md
@@ -6,10 +6,12 @@ stickie: true
 ---
 
 # ETHOS members at the University of Iceland
-<table style="width:100%">
+<table>
   <tr>
     <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
-    <td> Dr Jesus  </td>
+    <td> Dr. Jesús Zavala Franco <br>
+Associate Professor, Faculty of Physical Sciences, University of Iceland <br>
+PhD, 2007, Universidad Nacional Autónoma de México  </td>
   </tr>
 
 </table>
