--- a/_posts/2018-2-7-people.md
+++ b/_posts/2018-2-7-people.md
@@ -7,7 +7,7 @@ stickie: true
 
 # ETHOS members at the University of Iceland
 <table>
-  <tr>
+  <tr with="130px">
     <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
     <td> Dr. Jesús Zavala Franco <br>
 Associate Professor, Faculty of Physical Sciences, University of Iceland <br>
