--- a/_posts/2018-2-7-people.md
+++ b/_posts/2018-2-7-people.md
@@ -6,35 +6,85 @@ stickie: true
 ---
 
 # ETHOS members at the University of Iceland
+
 <table>
   <tr>
     <td width="120px"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
-    <td> Dr. Jesús Zavala Franco <br>
+    <td> 
+Dr. Jesús Zavala Franco <br>
 Associate Professor, Faculty of Physical Sciences, University of Iceland <br>
-PhD, 2007, Universidad Nacional Autónoma de México  </td>
+PhD, 2007, Universidad Nacional Autónoma de México  
+  </td>
   </tr>
+</table>
 
+<table>
+  <tr>
+    <td width="120px"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td> 
+Dr. Jesús Zavala Franco <br>
+Associate Professor, Faculty of Physical Sciences, University of Iceland <br>
+PhD, 2007, Universidad Nacional Autónoma de México  
+  </td>
+  </tr>
+</table>
+
+<table>
+  <tr>
+    <td width="120px"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td> 
+Dr. Jesús Zavala Franco <br>
+Associate Professor, Faculty of Physical Sciences, University of Iceland <br>
+PhD, 2007, Universidad Nacional Autónoma de México  
+  </td>
+  </tr>
 </table>
   
 
 # ETHOS members
+
+<table>
+  <tr>
+    <td width="120px"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td> 
 Torsten Bringmann
 Professor, Department of Physics, University of Oslo
 PhD, 2005, University of Stockholm
+email: torsten.bringmann@fys.uio.no
+website: http://www.mn.uio.no/fysikk/english/people/aca/troms/
+  </td>
+  </tr>
+</table>
 
-torsten.bringmann@fys.uio.no, link to website: http://www.mn.uio.no/fysikk/english/people/aca/troms/
-
+<table>
+  <tr>
+    <td width="120px"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td> 
 Francis-Yan Cyr-Racine
 Postdoctoral Fellow, Department of Physics, Harvard University
 PhD, 2012, University of British Columbia
 
-fcyrraci@physics.harvard.edu, link to website: http://users.physics.harvard.edu/~fcyrraci/index.html
+email: fcyrraci@physics.harvard.edu
+website: http://users.physics.harvard.edu/~fcyrraci/index.html
+  </td>
+  </tr>
+</table>
 
+
+<table>
+  <tr>
+    <td width="120px"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td> 
 Christoph Pfrommer
 Professor, Leibniz Institute for Astrophysics Potsdam
 PhD, 2005, Max Planck Institute for Astrophysics
 
-cpfrommer@aip.de, link to website: http://www.cita.utoronto.ca/~pfrommer/
+email: cpfrommer@aip.de
+website: http://www.cita.utoronto.ca/~pfrommer/
+  </td>
+  </tr>
+</table>
+
 
 Kris Sigurdson
 Associate Professor, Department of Physics and Astronomy, University of British Columbia
