--- a/_posts/2018-2-7-people.md
+++ b/_posts/2018-2-7-people.md
@@ -18,6 +18,7 @@ PhD, 2007, Universidad Nacional Autónoma de México
   </tr>
 </table>
 
+
 <table>
   <tr>
     <td width="120px"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
@@ -28,6 +29,7 @@ PhD, 2007, Universidad Nacional Autónoma de México
   </td>
   </tr>
 </table>
+
 
 <table>
   <tr>
@@ -47,11 +49,11 @@ PhD, 2007, Universidad Nacional Autónoma de México
   <tr>
     <td width="120px"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
     <td> 
-Torsten Bringmann
-Professor, Department of Physics, University of Oslo
-PhD, 2005, University of Stockholm
-email: torsten.bringmann@fys.uio.no
-website: http://www.mn.uio.no/fysikk/english/people/aca/troms/
+Torsten Bringmann <br>
+Professor, Department of Physics, University of Oslo <br>
+PhD, 2005, University of Stockholm <br>
+email: torsten.bringmann@fys.uio.no <br>
+website: http://www.mn.uio.no/fysikk/english/people/aca/troms/ <br>
   </td>
   </tr>
 </table>
@@ -60,12 +62,12 @@ website: http://www.mn.uio.no/fysikk/english/people/aca/troms/
   <tr>
     <td width="120px"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
     <td> 
-Francis-Yan Cyr-Racine
-Postdoctoral Fellow, Department of Physics, Harvard University
-PhD, 2012, University of British Columbia
+Francis-Yan Cyr-Racine <br>
+Postdoctoral Fellow, Department of Physics, Harvard University <br>
+PhD, 2012, University of British Columbia <br>
 
-email: fcyrraci@physics.harvard.edu
-website: http://users.physics.harvard.edu/~fcyrraci/index.html
+email: fcyrraci@physics.harvard.edu <br>
+website: http://users.physics.harvard.edu/~fcyrraci/index.html <br>
   </td>
   </tr>
 </table>
@@ -75,26 +77,41 @@ website: http://users.physics.harvard.edu/~fcyrraci/index.html
   <tr>
     <td width="120px"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
     <td> 
-Christoph Pfrommer
-Professor, Leibniz Institute for Astrophysics Potsdam
-PhD, 2005, Max Planck Institute for Astrophysics
+Christoph Pfrommer <br>
+Professor, Leibniz Institute for Astrophysics Potsdam <br>
+PhD, 2005, Max Planck Institute for Astrophysics <br>
 
-email: cpfrommer@aip.de
-website: http://www.cita.utoronto.ca/~pfrommer/
+email: cpfrommer@aip.de <br>
+website: http://www.cita.utoronto.ca/~pfrommer/ <br>
   </td>
   </tr>
 </table>
 
 
-Kris Sigurdson
-Associate Professor, Department of Physics and Astronomy, University of British Columbia
-PhD, 2005, California Institute of Technology
+<table>
+  <tr>
+    <td width="120px"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td> 
+Kris Sigurdson <br>
+Associate Professor, Department of Physics and Astronomy, University of British Columbia <br>
+PhD, 2005, California Institute of Technology <br>
 
-krs@phas.ubc.ca, link to website: http://www.phas.ubc.ca/~krs/
+email: krs@phas.ubc.ca <br>
+website: http://www.phas.ubc.ca/~krs/ <br>
+  </td>
+  </tr>
+</table>
 
-Mark Vogelsberger
-Assistant Professor, Department of Physics, MIT
-PhD, 2010, Max Planck Institute for Astrophysics
+<table>
+  <tr>
+    <td width="120px"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td> 
+Mark Vogelsberger <br>
+Assistant Professor, Department of Physics, MIT <br>
+PhD, 2010, Max Planck Institute for Astrophysics <br> 
 
-mvogelsb@mit.edu, link to website: http://web.mit.edu/physics/people/faculty/vogelsberger_mark.html
- 
+email: mvogelsb@mit.edu <br>
+website: http://web.mit.edu/physics/people/faculty/vogelsberger_mark.html <br>
+   </td>
+  </tr>
+</table>
