--- a/_posts/2018-2-7-people.md
+++ b/_posts/2018-2-7-people.md
@@ -9,8 +9,8 @@ stickie: true
 
 <table>
   <tr>
-    <td width="120px"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
-    <td> 
+    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td valign="top"> 
 Dr. Jesús Zavala Franco <br>
 Associate Professor, Faculty of Physical Sciences, University of Iceland <br>
 PhD, 2007, Universidad Nacional Autónoma de México  
@@ -18,11 +18,12 @@ PhD, 2007, Universidad Nacional Autónoma de México
   </tr>
 </table>
 
+<br>
 
 <table>
   <tr>
-    <td width="120px"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
-    <td> 
+    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td valign="top"> 
 Dr. Jesús Zavala Franco <br>
 Associate Professor, Faculty of Physical Sciences, University of Iceland <br>
 PhD, 2007, Universidad Nacional Autónoma de México  
@@ -30,11 +31,11 @@ PhD, 2007, Universidad Nacional Autónoma de México
   </tr>
 </table>
 
-
+<br>
 <table>
   <tr>
-    <td width="120px"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
-    <td> 
+    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td valign="top"> 
 Dr. Jesús Zavala Franco <br>
 Associate Professor, Faculty of Physical Sciences, University of Iceland <br>
 PhD, 2007, Universidad Nacional Autónoma de México  
@@ -42,13 +43,14 @@ PhD, 2007, Universidad Nacional Autónoma de México
   </tr>
 </table>
   
+<br>
 
 # ETHOS members
 
 <table>
   <tr>
-    <td width="120px"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
-    <td> 
+    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td valign="top"> 
 Torsten Bringmann <br>
 Professor, Department of Physics, University of Oslo <br>
 PhD, 2005, University of Stockholm <br>
@@ -57,11 +59,11 @@ website: http://www.mn.uio.no/fysikk/english/people/aca/troms/ <br>
   </td>
   </tr>
 </table>
-
+<br>
 <table>
   <tr>
-    <td width="120px"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
-    <td> 
+    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td valign="top"> 
 Francis-Yan Cyr-Racine <br>
 Postdoctoral Fellow, Department of Physics, Harvard University <br>
 PhD, 2012, University of British Columbia <br>
@@ -72,11 +74,11 @@ website: http://users.physics.harvard.edu/~fcyrraci/index.html <br>
   </tr>
 </table>
 
-
+<br>
 <table>
   <tr>
-    <td width="120px"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
-    <td> 
+    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td valign="top"> 
 Christoph Pfrommer <br>
 Professor, Leibniz Institute for Astrophysics Potsdam <br>
 PhD, 2005, Max Planck Institute for Astrophysics <br>
@@ -87,11 +89,11 @@ website: http://www.cita.utoronto.ca/~pfrommer/ <br>
   </tr>
 </table>
 
-
+<br>
 <table>
   <tr>
-    <td width="120px"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
-    <td> 
+    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td valign="top"> 
 Kris Sigurdson <br>
 Associate Professor, Department of Physics and Astronomy, University of British Columbia <br>
 PhD, 2005, California Institute of Technology <br>
@@ -101,11 +103,11 @@ website: http://www.phas.ubc.ca/~krs/ <br>
   </td>
   </tr>
 </table>
-
+<br>
 <table>
   <tr>
-    <td width="120px"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
-    <td> 
+    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td valign="top"> 
 Mark Vogelsberger <br>
 Assistant Professor, Department of Physics, MIT <br>
 PhD, 2010, Max Planck Institute for Astrophysics <br> 
