--- a/_posts/2018-2-7-people.md
+++ b/_posts/2018-2-7-people.md
@@ -6,7 +6,7 @@ stickie: true
 ---
 
 # ETHOS members at the University of Iceland
-
+- Dr. Jesús Zavala Franco
 <table>
   <tr>
     <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
