--- a/_posts/2018-2-7-people.md
+++ b/_posts/2018-2-7-people.md
@@ -6,7 +6,7 @@ stickie: true
 ---
 
 # ETHOS members at the University of Iceland
-- Dr. Jesús Zavala Franco
+<br>
 <table>
   <tr>
     <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
@@ -14,6 +14,8 @@ stickie: true
 Dr. Jesús Zavala Franco <br>
 Associate Professor, Faculty of Physical Sciences, University of Iceland <br>
 PhD, 2007, Universidad Nacional Autónoma de México  
+email: jzavala@hi.is 
+website: https://notendur.hi.is/~jzavala/index.html
   </td>
   </tr>
 </table>
@@ -46,7 +48,7 @@ PhD, 2007, Universidad Nacional Autónoma de México
 <br>
 
 # ETHOS members
-
+<br>
 <table>
   <tr>
     <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
