--- a/_posts/2018-2-7-people.md
+++ b/_posts/2018-2-7-people.md
@@ -11,11 +11,11 @@ stickie: true
   <tr>
     <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
     <td valign="top"> 
-Dr. Jesús Zavala Franco <br>
+Dr Jesús Zavala Franco <br>
 Associate Professor, Faculty of Physical Sciences, University of Iceland <br>
-PhD, 2007, Universidad Nacional Autónoma de México  
-email: jzavala@hi.is 
-website: https://notendur.hi.is/~jzavala/index.html
+PhD, 2007, Universidad Nacional Autónoma de México  <br>
+email: <a href="mailto:jzavala@hi.is">jzavala@hi.is</a> <br>
+website: <a href="https://notendur.hi.is/~jzavala/index.html">https://notendur.hi.is/~jzavala/index.html</a>
   </td>
   </tr>
 </table>
@@ -26,9 +26,10 @@ website: https://notendur.hi.is/~jzavala/index.html
   <tr>
     <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
     <td valign="top"> 
-Dr. Jesús Zavala Franco <br>
-Associate Professor, Faculty of Physical Sciences, University of Iceland <br>
-PhD, 2007, Universidad Nacional Autónoma de México  
+Dr. Mark Lovell<br>
+Postdoctoral Fellow, Faculty of Physical Sciences, University of Iceland <br> 
+email: <a href="mailto:mr.lovell62@gmail.com">mr.lovell62@gmail.com</a>
+website: 
   </td>
   </tr>
 </table>
@@ -38,9 +39,10 @@ PhD, 2007, Universidad Nacional Autónoma de México
   <tr>
     <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
     <td valign="top"> 
-Dr. Jesús Zavala Franco <br>
-Associate Professor, Faculty of Physical Sciences, University of Iceland <br>
-PhD, 2007, Universidad Nacional Autónoma de México  
+Dr. Chaichalit Srisawat <br>
+Postdoctoral Fellow, Faculty of Physical Sciences, University of Iceland <br>
+PhD, 2015, University of Sussex 
+email: <a href="mailto:boyd.srisawat@gmail.com">boyd.srisawat@gmail.com</a>
   </td>
   </tr>
 </table>
