--- a/_posts/2018-2-7-people.md
+++ b/_posts/2018-2-7-people.md
@@ -26,7 +26,7 @@ website: <a href="https://notendur.hi.is/~jzavala/index.html">https://notendur.h
   <tr>
     <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
     <td valign="top"> 
-Dr. Mark Lovell<br>
+Dr Mark Lovell<br>
 Postdoctoral Fellow, Faculty of Physical Sciences, University of Iceland <br> 
 email: <a href="mailto:mr.lovell62@gmail.com">mr.lovell62@gmail.com</a>
 website: 
@@ -39,9 +39,9 @@ website:
   <tr>
     <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
     <td valign="top"> 
-Dr. Chaichalit Srisawat <br>
+Dr Chaichalit Srisawat <br>
 Postdoctoral Fellow, Faculty of Physical Sciences, University of Iceland <br>
-PhD, 2015, University of Sussex 
+PhD, 2015, University of Sussex <br>
 email: <a href="mailto:boyd.srisawat@gmail.com">boyd.srisawat@gmail.com</a>
   </td>
   </tr>
@@ -55,11 +55,11 @@ email: <a href="mailto:boyd.srisawat@gmail.com">boyd.srisawat@gmail.com</a>
   <tr>
     <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
     <td valign="top"> 
-Torsten Bringmann <br>
+Prof Torsten Bringmann <br>
 Professor, Department of Physics, University of Oslo <br>
 PhD, 2005, University of Stockholm <br>
-email: torsten.bringmann@fys.uio.no <br>
-website: http://www.mn.uio.no/fysikk/english/people/aca/troms/ <br>
+email: <a href="mailto:torsten.bringmann@fys.uio.no">torsten.bringmann@fys.uio.no</a> <br>
+website: <a href="http://www.mn.uio.no/fysikk/english/people/aca/troms/">http://www.mn.uio.no/fysikk/english/people/aca/troms/</a><br>
   </td>
   </tr>
 </table>
@@ -68,12 +68,12 @@ website: http://www.mn.uio.no/fysikk/english/people/aca/troms/ <br>
   <tr>
     <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
     <td valign="top"> 
-Francis-Yan Cyr-Racine <br>
+Dr Francis-Yan Cyr-Racine <br>
 Postdoctoral Fellow, Department of Physics, Harvard University <br>
 PhD, 2012, University of British Columbia <br>
 
-email: fcyrraci@physics.harvard.edu <br>
-website: http://users.physics.harvard.edu/~fcyrraci/index.html <br>
+email: <a href="mailto:fcyrraci@physics.harvard.edu">fcyrraci@physics.harvard.edu</a> <br>
+website: <a href="http://users.physics.harvard.edu/~fcyrraci/index.html">http://users.physics.harvard.edu/~fcyrraci/index.html</a> <br>
   </td>
   </tr>
 </table>
@@ -83,12 +83,12 @@ website: http://users.physics.harvard.edu/~fcyrraci/index.html <br>
   <tr>
     <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
     <td valign="top"> 
-Christoph Pfrommer <br>
+Prof Christoph Pfrommer <br>
 Professor, Leibniz Institute for Astrophysics Potsdam <br>
 PhD, 2005, Max Planck Institute for Astrophysics <br>
 
-email: cpfrommer@aip.de <br>
-website: http://www.cita.utoronto.ca/~pfrommer/ <br>
+email: <a href="mailto:cpfrommer@aip.de">cpfrommer@aip.de</a> <br>
+website: <a href="http://www.cita.utoronto.ca/~pfrommer/">http://www.cita.utoronto.ca/~pfrommer/</a> <br>
   </td>
   </tr>
 </table>
@@ -98,12 +98,12 @@ website: http://www.cita.utoronto.ca/~pfrommer/ <br>
   <tr>
     <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
     <td valign="top"> 
-Kris Sigurdson <br>
+Dr Kris Sigurdson <br>
 Associate Professor, Department of Physics and Astronomy, University of British Columbia <br>
 PhD, 2005, California Institute of Technology <br>
 
-email: krs@phas.ubc.ca <br>
-website: http://www.phas.ubc.ca/~krs/ <br>
+email: <a href="mailto:krs@phas.ubc.ca">krs@phas.ubc.ca</a><br>
+website: <a href="http://www.phas.ubc.ca/~krs/">http://www.phas.ubc.ca/~krs/</a> <br>
   </td>
   </tr>
 </table>
@@ -112,12 +112,12 @@ website: http://www.phas.ubc.ca/~krs/ <br>
   <tr>
     <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
     <td valign="top"> 
-Mark Vogelsberger <br>
+Dr Mark Vogelsberger <br>
 Assistant Professor, Department of Physics, MIT <br>
 PhD, 2010, Max Planck Institute for Astrophysics <br> 
 
-email: mvogelsb@mit.edu <br>
-website: http://web.mit.edu/physics/people/faculty/vogelsberger_mark.html <br>
+email: <a href="mailto:mvogelsb@mit.edu">mvogelsb@mit.edu</a> <br>
+website: <a href="http://web.mit.edu/physics/people/faculty/vogelsberger_mark.html ">http://web.mit.edu/physics/people/faculty/vogelsberger_mark.html</a> <br>
    </td>
   </tr>
 </table>
