--- a/_posts/2018-2-7-people.md
+++ b/_posts/2018-2-7-people.md
@@ -9,7 +9,7 @@ stickie: true
 <br>
 <table>
   <tr>
-    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px" height="100px"></td>
     <td valign="top"> 
 Dr Jesús Zavala Franco <br>
 Associate Professor, Faculty of Physical Sciences, University of Iceland <br>
@@ -24,7 +24,7 @@ website: <a href="https://notendur.hi.is/~jzavala/index.html">https://notendur.h
 
 <table>
   <tr>
-    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px" height="100px"></td>
     <td valign="top"> 
 Dr Mark Lovell<br>
 Postdoctoral Fellow, Faculty of Physical Sciences, University of Iceland <br> 
@@ -37,7 +37,7 @@ website:
 <br>
 <table>
   <tr>
-    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px" height="100px"></td>
     <td valign="top"> 
 Dr Chaichalit Srisawat <br>
 Postdoctoral Fellow, Faculty of Physical Sciences, University of Iceland <br>
@@ -53,7 +53,7 @@ email: <a href="mailto:boyd.srisawat@gmail.com">boyd.srisawat@gmail.com</a>
 <br>
 <table>
   <tr>
-    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px" height="100px"></td>
     <td valign="top"> 
 Prof Torsten Bringmann <br>
 Professor, Department of Physics, University of Oslo <br>
@@ -66,7 +66,7 @@ website: <a href="http://www.mn.uio.no/fysikk/english/people/aca/troms/">http://
 <br>
 <table>
   <tr>
-    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px" height="100px"></td>
     <td valign="top"> 
 Dr Francis-Yan Cyr-Racine <br>
 Postdoctoral Fellow, Department of Physics, Harvard University <br>
@@ -81,7 +81,7 @@ website: <a href="http://users.physics.harvard.edu/~fcyrraci/index.html">http://
 <br>
 <table>
   <tr>
-    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px" height="100px"></td>
     <td valign="top"> 
 Prof Christoph Pfrommer <br>
 Professor, Leibniz Institute for Astrophysics Potsdam <br>
@@ -96,7 +96,7 @@ website: <a href="http://www.cita.utoronto.ca/~pfrommer/">http://www.cita.utoron
 <br>
 <table>
   <tr>
-    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px" height="100px"></td>
     <td valign="top"> 
 Dr Kris Sigurdson <br>
 Associate Professor, Department of Physics and Astronomy, University of British Columbia <br>
@@ -110,7 +110,7 @@ website: <a href="http://www.phas.ubc.ca/~krs/">http://www.phas.ubc.ca/~krs/</a>
 <br>
 <table>
   <tr>
-    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px"></td>
+    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px" height="100px"></td>
     <td valign="top"> 
 Dr Mark Vogelsberger <br>
 Assistant Professor, Department of Physics, MIT <br>
