--- a/_posts/2018-2-7-people.md
+++ b/_posts/2018-2-7-people.md
@@ -26,6 +26,36 @@ website: <a href="https://notendur.hi.is/~jzavala/index.html">https://notendur.h
   <tr>
     <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px" height="100px"></td>
     <td valign="top"> 
+Sebastian Bohr<br>
+PhD student, Faculty of Physical Sciences, University of Iceland <br> 
+email: <a href="mailto:seb21@hi.is">seb21@hi.is</a>
+website: 
+  </td>
+  </tr>
+</table>
+
+
+<br>
+
+<table>
+  <tr>
+    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="120px"></td>
+    <td valign="top"> 
+Jan Burger<br>
+PhD student, Faculty of Physical Sciences, University of Iceland <br> 
+email: <a href="mailto:jdb5@hi.is">jdb5@hi.is</a>
+website: 
+  </td>
+  </tr>
+</table>
+
+
+<br>
+
+<table>
+  <tr>
+    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px" height="100px"></td>
+    <td valign="top"> 
 Dr Mark Lovell<br>
 Postdoctoral Fellow, Faculty of Physical Sciences, University of Iceland <br> 
 email: <a href="mailto:mr.lovell62@gmail.com">mr.lovell62@gmail.com</a>
