--- a/_posts/2018-2-7-people.md
+++ b/_posts/2018-2-7-people.md
@@ -79,7 +79,7 @@ email: <a href="mailto:boyd.srisawat@gmail.com">boyd.srisawat@gmail.com</a>
   
 <br>
 
-# ETHOS members
+# ETHOS members at other institutions
 <br>
 <table>
   <tr>
